# AutoHotkey-ProcessRunner-dll

./: CMakeLists.txt  README.md  build.ps1  vcpkg.json
.github/workflows/: main.yaml
src/AutoHotkey-ProcessRunner/: PrecompiledHeader.h  ProcessRunner.h  ProcessRunner.idl  main.cpp  resource.aps  resource.rc
src/AutoHotkey-ProcessRunner/Utils/: ComUtils.h  ComVariantToString.h  Exception.h  Logger.h  StringUtils.h
src/test/: test.ahk2
